<?xml version="1.0" encoding="utf-8"?>
<com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshview_user_center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5"
    android:orientation="vertical"
    app:srlEnableFooterTranslationContent="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/bg_my"
            android:orientation="vertical"
            android:paddingTop="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="个人中心"
                android:textColor="@color/white"
                android:textSize="18sp"></TextView>

            <RelativeLayout
                android:id="@+id/rl_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="17dp"
                android:layout_marginLeft="@dimen/margin_15"
                android:layout_marginRight="@dimen/margin_15"
                android:layout_marginTop="21dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_user_head"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_toRightOf="@+id/iv_user_head"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/tv_snack"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text=""
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="@dimen/margin_10"
                            android:layout_toRightOf="@+id/tv_snack"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/shape_radius_gray"
                                android:orientation="horizontal"
                                android:paddingLeft="3dp"
                                android:paddingRight="5dp">

                                <ImageView
                                    android:id="@+id/iv_liquid"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginBottom="1dp"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginTop="1dp"
                                    android:src="@mipmap/icon_small_fluid_one" />

                                <TextView
                                    android:id="@+id/tv_liquid_level"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="1dp"
                                    android:text="一级"
                                    android:textColor="@color/white"
                                    android:textSize="10sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="@dimen/margin_10"
                                android:layout_marginRight="@dimen/margin_10"
                                android:layout_weight="1"
                                android:background="@drawable/shape_radius_gray"
                                android:orientation="horizontal"
                                android:paddingLeft="3dp"
                                android:paddingRight="5dp">

                                <ImageView
                                    android:id="@+id/iv_fresh"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginBottom="1dp"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginTop="1dp"
                                    android:src="@mipmap/icon_small_fresh_one" />

                                <TextView
                                    android:id="@+id/tv_fresh_level"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="1dp"
                                    android:text="一级"
                                    android:textColor="@color/white"
                                    android:textSize="10sp" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@drawable/shape_radius_gray"
                                android:orientation="horizontal"
                                android:paddingLeft="3dp"
                                android:paddingRight="5dp">

                                <ImageView
                                    android:id="@+id/iv_parts"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginBottom="1dp"
                                    android:layout_marginLeft="2dp"
                                    android:layout_marginTop="1dp"
                                    android:src="@mipmap/icon_small_automobiellevel_one" />

                                <TextView
                                    android:id="@+id/tv_parts_level"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_vertical"
                                    android:layout_marginLeft="1dp"
                                    android:text="一级"
                                    android:textColor="@color/white"
                                    android:textSize="10sp" />
                            </LinearLayout>
                        </LinearLayout>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:scaleType="centerCrop"
                            android:src="@mipmap/icon_phone" />

                        <TextView
                            android:id="@+id/tv_phone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginLeft="3dp"
                            android:text="15921326326"
                            android:textColor="@color/white"
                            android:textSize="@dimen/textSize_13" />
                    </LinearLayout>
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon_arrow_right_white" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_wallet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/white"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_wallet"
                android:drawablePadding="@dimen/margin_10"
                android:text="@string/mywallet"
                android:textColor="@color/color_333"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_wallet_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_toLeftOf="@+id/iv_wallet_arrow"
                android:text="￥0.00"
                android:textColor="@color/color_666"
                android:textSize="@dimen/textSize_14" />

            <ImageView
                android:id="@+id/iv_wallet_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_platform_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/white"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_platform_support"
                android:drawablePadding="@dimen/margin_10"
                android:text="@string/platfomr_support_people"
                android:textColor="@color/color_333"
                android:textSize="@dimen/textSize_15" />

            <ImageView
                android:id="@+id/iv_platform_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_switch_identify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/white"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_switch_identify"
                android:drawablePadding="@dimen/margin_10"
                android:text="@string/switch_identify"
                android:textColor="@color/color_333"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_identify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/margin_10"
                android:layout_toLeftOf="@+id/iv_identify_arrow"
                android:textColor="@color/base_text_color_light"
                android:textSize="@dimen/textSize_13" />

            <ImageView
                android:id="@+id/iv_identify_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_arrow_right" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:background="@color/white"
            android:paddingBottom="@dimen/margin_10"
            android:paddingLeft="@dimen/margin_15"
            android:paddingRight="@dimen/margin_15"
            android:paddingTop="@dimen/margin_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:drawableLeft="@mipmap/icon_version"
                android:drawablePadding="@dimen/margin_10"
                android:text="@string/version"
                android:textColor="@color/color_333"
                android:textSize="@dimen/textSize_15" />

            <TextView
                android:id="@+id/tv_version"
                style="@style/textview_33color_13size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true" />
        </RelativeLayout>
    </LinearLayout>
</com.scwang.smartrefresh.layout.SmartRefreshLayout>